Add: popular drama API, timetable API and fetching APIs on web initial load

--- a/frontend/page/index.ejs
+++ b/frontend/page/index.ejs
@@ -97,113 +97,16 @@
 
 
     <!-- Latest Drama List-->
-    <div class="drama-card-container">
-        <div class="drama-card-header">本季最新日本劇集</div>
-        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-3 row-cols-sm-2 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srn3ypc7cg.jpg?v=4" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">ひともんちゃくなら喜んで！</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srxmr1z44t.jpg?v=10" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">大病院占拠</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srqe0wiy79.jpg?v=8" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">ハマる男に蹴りたい女</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srzrytirvz.jpg?v=6" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">わたしの夫は ―あの娘の恋人― </h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srp1dtwsvj.jpg?v=6" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">6秒間の軌跡～花火師・望月星太郎の憂鬱</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srzcg7do3m.jpg?v=10" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">100万回 言えばよかった</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="latest-drama-container">
+        <div class="latest-drama-header">本季最新日本劇集</div>
+        <div id="latestDramaContainer" class="row row-cols-1 row-cols-xl-6 row-cols-lg-3 row-cols-sm-2 g-4"></div>
     </div>
 
+
     <!-- Popular Drama List -->
-    <div class="drama-card-container">
-        <div class="drama-card-header">最受歡迎日本劇集</div>
-        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-3 row-cols-sm-2 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/sr84opbk2g.jpg?v=6" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">リバーサルオーケストラ</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/sr9vwa57tg.jpg?v=4" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">夫を社会的に抹殺する5つの方法</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srli4l3rxs.jpg?v=11" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">女神の教室～リーガル青春白書～</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srwkhouxv9.jpg?v=6" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Get Ready!</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/sr8npss1x1.jpg?v=6" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">ブラッシュアップライフ</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://statics.tver.jp/images/content/thumbnail/series/small/srod9bk0sk.jpg?v=13" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">花嫁未満エスケープ 完結編</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="popular-drama-container">
+        <div class="popular-drama-header">最受歡迎日本劇集</div>
+        <div id="popularDramaContainer" class="row row-cols-1 row-cols-xl-6 row-cols-lg-3 row-cols-sm-2 g-4"></div>
     </div>
 
 
@@ -212,161 +115,34 @@
         <div class="timetable-width">
             <div class="timetable-header">本季播放時間表</div>
             <div class="timetable">
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期一</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srqe0wiy79.jpg?v=8" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srzrytirvz.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srp1dtwsvj.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableMonContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期二</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srzcg7do3m.jpg?v=10" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/sr84opbk2g.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/sr9vwa57tg.jpg?v=4" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableTueContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期三</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srod9bk0sk.jpg?v=13" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/sr8npss1x1.jpg?v=7" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srwkhouxv9.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableWedContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期四</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srli4l3rxs.jpg?v=11" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srjgkxugna.jpg?v=11" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/srjqfpikg5.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableThurContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期五</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/series/small/sr4x2fqjd5.jpg?v=12" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-mon01.jpg?v=10" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-tue01.jpg?v=7" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableFriContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期六</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-wed01.jpg?v=11" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-thu01.jpg?v=10" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-fri01.jpg?v=7" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableSatContainer"></div>
                 </div>
-
                 <div class="timetable-list">
                     <div class="timetable-list-header">星期日</div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-sat01.jpg?v=8" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/special/small/win23-sun01.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
-                    <div class="timetable-list-border">
-                        <img class="timetable-list-photo" src="https://statics.tver.jp/images/content/thumbnail/episode/small/ep8hm0lveb.jpg?v=6" alt="">
-                        <div class="timetable-list-title">
-                            <div>ブラッシュアップライフ</div>
-                        </div>
-                    </div>
+                    <div id="timetableSunContainer"></div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -383,7 +159,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/main.js"></script>
 
 </body>
 
