Add: fetch API data in drama page

--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -2,18 +2,18 @@
     <div class="transparent-layer"></div>
     <div class="drama-banner-width">
         <div class="drama-photo-container">
-            <img class="drama-photo" src="https://drive.google.com/uc?id=1K_lTKC6MVt2bC-Z9QLCjmJTlqxTmrNv7">
+            <img id="dramaCoverPhoto" class="drama-photo">
         </div>
         <div class="drama-details-container">
-            <div class="drama-details-title">女神的教室 (2023)</div>
-            <div class="drama-details-category">法務、校園</div>
+            <div id="dramaTitle" class="drama-details-title"></div>
+            <div id="dramaCategory" class="drama-details-category"></div>
             <div class="drama-details-brief-title">概要</div>
-            <div class="drama-details-brief">以法學院為舞臺，法官兼實務家教員的主人公柊木雫（北川景子）和圍繞她的人們一邊互相碰撞自己的價值觀，一邊詢問法律界現有狀態。</div>
-            <div class="drama-details-tv">富士電視台</div>
+            <div id="dramaIntroduction" class="drama-details-brief"></div>
+            <div id="dramaTV" class="drama-details-tv"></div>
             <div class="drama-details-day-time">
-                <span>每週一</span>
-                <span>21:00~21:54</span>
-                <span>(首播日期: 2023-01-09)</span>
+                <span id="dramaWeek"></span>
+                <span id="dramaTimeOfBoardcast"></span>
+                <span id="dramaDateOfBoardcast"></span>
             </div>
             <div class="drama-episode">
                 <div class="drama-episode-title">第1話</div>
