--- a/frontend/page/drama.ejs
+++ b/frontend/page/drama.ejs
@@ -26,7 +26,7 @@
 <%- include("./drama/drama.separator.ejs") %>
 
 <!-- Media -->
-<%- include("./drama/drama.media.ejs") %>
+<!-- <%- include("./drama/drama.media.ejs") %> -->
 
 <!-- Footer -->
 <%- include("./commons/common.footer.ejs") %>
