--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -3,7 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0/dist/chartjs-plugin-datalabels.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.min.js"></script>
-<script type="module" src="js/drama/drama.main.js"></script>
+<script type="module" src="/js/drama/drama.main.js"></script>
 
 </body>
 
