Update: fetch API data in drama page

--- a/frontend/page/drama/drama.casts.ejs
+++ b/frontend/page/drama/drama.casts.ejs
@@ -6,43 +6,6 @@
     </div>
 
     <div class="cast-center">
-        <div class="cast-container">
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/hbFxLjMvFnbdPA81RnJ5F9Pdi91.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/1oRe8UYddBYzyqAjlSwMTIFgg4K.jpg">
-                <div class="cast-actor">藍井仁 / 山田裕貴</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/4Ixs64qw8oE7BBy9TMA6dhUkzjc.jpg">
-                <div class="cast-actor">照井雪乃 / 南沙良</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/9Ss4rHbGo4RxEmGTXvEMThdYzjV.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/t0L4rJmYq507hyfaov7Kpk7cDix.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/cOWmkaKC848jIersVa18l1DYL54.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/lBE7Qh9Qujba1R1A73cj3XdBu9n.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/e0smIY7Uroru2j0hLmh6NwZydmY.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-            <div class="cast">
-                <img class="cast-photo" src="https://www.themoviedb.org/t/p/w138_and_h175_face/i8n9U3JlujjyPmiZPHGkpwxkh7X.jpg">
-                <div class="cast-actor">柊木雫 / 北川景子</div>
-            </div>
-        </div>
+        <div id="castContainer" class="cast-container"></div>
     </div>
 </div>
