--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -15,18 +15,7 @@
                 <span id="dramaTimeOfBoardcast"></span>
                 <span id="dramaDateOfBoardcast"></span>
             </div>
-            <div class="drama-episode">
-                <div class="drama-episode-title">第1話</div>
-                <div class="drama-episode-title">第2話</div>
-                <div class="drama-episode-title">第3話</div>
-                <div class="drama-episode-title">第4話</div>
-                <div class="drama-episode-title">第5話</div>
-                <div class="drama-episode-title">第6話</div>
-                <div class="drama-episode-title">第7話</div>
-                <div class="drama-episode-title">第8話</div>
-                <div class="drama-episode-title">第9話</div>
-                <div class="drama-episode-title">第10話</div>
-            </div>
+            <div id="dramaDownload" class="drama-episode"></div>
             <div class="drama-edit">編輯</div>
         </div>
     </div>
