Update: fetch API data for media in drama page

--- a/frontend/page/drama/drama.media.ejs
+++ b/frontend/page/drama/drama.media.ejs
@@ -2,9 +2,7 @@
     <div class="media-container">
         <div class="media-width">
             <div class="media">媒體資訊</div>
-            <div class="media-video-container">
-                <iframe class="media-video" src="https://www.youtube.com/embed/P90avWuEH_U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            <div id="dramaMedia" class="media-video-container"></div>
         </div>
     </div>
 </div>
