--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -15,6 +15,11 @@ ul, ol {
 a:link,
 a:visited {
     text-decoration: none;
+    color: #212529;
+}
+
+a:visited:hover {
+    color: #212529;
 }
 
 body {
