Update: drama rating calculation

--- a/frontend/page/drama/drama.rating.ejs
+++ b/frontend/page/drama/drama.rating.ejs
@@ -2,7 +2,7 @@
     <div class="rating-container">
         <div class="rating-width">
             <div class="rating">收視率</div>
-            <div class="rating-chart">
+            <div id="dramaRating" class="rating-chart">
                 <canvas id="myChart"></canvas>
             </div>
         </div>
