Update: drama page layout

--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -10,11 +10,11 @@
             <div class="drama-details-brief-title">概要</div>
             <div id="dramaIntroduction" class="drama-details-brief"></div>
             <div id="dramaTV" class="drama-details-tv"></div>
-            <div class="drama-details-day-time">
+            <li id="dramaDateOfBoardcast" class="drama-details-date-of-boardcast"></li>
+            <li class="drama-details-day-time">
                 <span id="dramaWeek"></span>
                 <span id="dramaTimeOfBoardcast"></span>
-                <span id="dramaDateOfBoardcast"></span>
-            </div>
+            </li>
             <div id="dramaDownload" class="drama-episode"></div>
             <div class="drama-edit">編輯</div>
         </div>
