Add: drama photo dominant API and fetching API

--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -1,10 +1,10 @@
-<div class="drama-banner-center">
-    <div class="transparent-layer"></div>
+<div id="dramaBannerBackgroundPhoto" class="drama-banner-center">
+    <div id="transparentLayer" class="transparent-layer"></div>
     <div class="drama-banner-width">
         <div class="drama-photo-container">
             <img id="dramaCoverPhoto" class="drama-photo">
         </div>
-        <div class="drama-details-container">
+        <div id="dramaDetailsFontColor" class="drama-details-container">
             <div id="dramaTitle" class="drama-details-title"></div>
             <div id="dramaCategory" class="drama-details-category"></div>
             <div class="drama-details-brief-title">概要</div>
