--- a/frontend/public/css/drama.css
+++ b/frontend/public/css/drama.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 550px;
-    background-image: url("https://statics.tver.jp/images/content/thumbnail/episode/xlarge/epvl45euhr.jpg?v=56");
+    /* background-image: url("https://statics.tver.jp/images/content/thumbnail/episode/xlarge/epvl45euhr.jpg?v=56"); */
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 10px;
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     height: 550px;
-    background-color: rgba(241.5, 157.5, 157.5, 0.84);
+    /* background-color: rgba(220, 150, 148, 0.84); */
 }
 
 .drama-banner-width {
@@ -51,6 +51,7 @@
     z-index: 3;
     flex: auto;
     width: 50%;
+    border-radius: 10px;
 }
 
 .drama-details-title {
@@ -172,11 +173,11 @@
 
 .cast-actor-name {
     font-weight: bold;
-    font-size: 17px;
+    font-size: 18px;
 }
 
 .cast-cast-name {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 
