Update: index page layout

--- a/frontend/page/index.ejs
+++ b/frontend/page/index.ejs
@@ -7,11 +7,11 @@
 <!-- Banner -->
 <%- include("./index/index.banner.ejs") %>
 
-<!-- Carousel -->
-<%- include("./index/index.carousel.ejs") %>
-
 <!-- Latest Drama List-->
 <%- include("./index/index.latestDramaList.ejs") %>
+
+<!-- Carousel -->
+<!-- <%- include("./index/index.carousel.ejs") %> -->
 
 <!-- Popular Drama List -->
 <%- include("./index/index.popularDramaList.ejs") %>
