--- a/frontend/page/index/index.latestDramaList.ejs
+++ b/frontend/page/index/index.latestDramaList.ejs
@@ -1,4 +1,6 @@
 <div class="latest-drama-container">
-    <div class="latest-drama-header">本季最新日本劇集</div>
-    <div id="latestDramaContainer" class="row row-cols-1 row-cols-xl-6 row-cols-lg-3 row-cols-sm-2 g-4"></div>
+    <div class="latest-drama-width">
+        <div class="latest-drama-header">本季最新日本劇集</div>
+        <div id="latestDramaContainer" class="latest-drama-photo-container"></div>
+    </div>
 </div>
