--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -73,27 +73,59 @@
 
 /* Lastest and Popular Drama List */
 .latest-drama-container,
-.popular-drama-container {  
-    margin: 35px;
+.popular-drama-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.latest-drama-width,
+.popular-drama-width {
+    width: 1200px;
+    margin: 20px;
 }
 
 .latest-drama-header,
 .popular-drama-header {
-    margin-bottom: 15px;
-    font-size: 20px;
+    margin: 20px 10px 10px 10px;
+    font-size: 25px;
     font-weight: bold;
 }
 
-.card-title {
+.latest-drama-photo-container,
+.popular-drama-photo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.latest-drama-photo,
+.popular-drama-photo {
+    flex: auto;
+    width: 20%;
+    height: 300px;
+    margin: 10px;
+    border: 1px solid rgb(223, 218, 218);
+    border-radius: 10px;
+    box-shadow: 0.3em 0.3em 1em rgba(0, 0, 0, 0.2);
+}
+
+.latest-drama-photo-individual,
+.popular-drama-photo-individual {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.latest-drama-photo-individual-title,
+.popular-drama-photo-individual-title {
+    margin: 10px;
+    padding: 5px;
+    font-size: 18px;
     font-weight: bold;
-}
-
-.col {
-    cursor: pointer;
-}
-
-.card {
-    box-shadow: 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 
 
@@ -106,12 +138,12 @@
 
 .timetable-width {
     width: 1200px;
-    margin: 25px;
+    margin: 20px;
 }
 
 .timetable-header {
     margin: 10px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -155,34 +187,26 @@
     border-radius: 5px;
 }
 
-.timetable-list-title {
-    display: flex;
-    position: relative;
-    bottom: 45px;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 45px;
-    margin-bottom: -45px;
-    padding: 15px;
-    border-radius: 0px 0px 5px 5px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    font-size: 0.8vw;
-    font-weight: bold;
-    text-align: center;
-}
-
 
 /* Other Devices */
 @media(max-width:1200px) {
+
+    .latest-drama-photo-container,
+    .popular-drama-photo-container {
+        flex-wrap: wrap;
+    }
     
+    .latest-drama-photo,
+    .popular-drama-photo {
+        width: 25%;
+    }
+
     .timetable {
         flex-wrap: wrap;
     }
     
     .timetable-list {
-        width: 25%;
+        width: 20%;
     }
 
     .timetable-list-title {
@@ -191,17 +215,14 @@
 
 }
 
-@media(max-width:1000px) {
-        
-    .timetable-list {
-        width: 45%;
-    }
-
-}
-
 @media(max-width:575px) {
         
     .timetable-list {
+        width: 90%;
+    }
+
+    .latest-drama-photo,
+    .popular-drama-photo {
         width: 90%;
     }
 
