Update: index and drama page layout alignment plus loading effect

--- a/frontend/page/commons/common.footer.ejs
+++ b/frontend/page/commons/common.footer.ejs
@@ -1,5 +1,5 @@
 <div>
     <div class="footer">
-        <div>Copyright © 2023 JProgrammer All Rights Reserved.</div>
+        <div class="footer-text">Copyright © 2023 JProgrammer All Rights Reserved.</div>
     </div>
 </div>
