--- a/frontend/page/commons/common.navigation.ejs
+++ b/frontend/page/commons/common.navigation.ejs
@@ -4,12 +4,19 @@
             <div class="nav-bar">
                 <div class="nav-bar-left-title">
                     <div class="nav-bar-left-title-web-title">
-                        <a class="nav-bar-left-title-web-title-color" href="/">JProgrammer</a>
+                        <a class="nav-bar-left-title-web-title-color" href="/">
+                            <img class="nav-bar-logo" src="/img/logo.png">
+                        </a>
                     </div>
-                    <div class="nav-bar-left-title-drama-list">最新日本劇集</div>
+                    <div class="nav-bar-left-title-drama-list">
+                        <img class="nav-bar-left-title-drama-icon" src="/img/icon_drama.png">
+                        <div class="nav-bar-left-title-drama-title">最新日本劇集</div>
+                    </div>
                 </div>
                 <div class="nav-bar-right-title">
+                    <img class="nav-bar-right-title-add-drama-icon" src="/img/icon_add_drama.png">
                     <div class="nav-bar-right-title-add-drama">提供劇集資料</div>
+                    <img class="nav-bar-right-title-signin-icon" src="/img/icon_signin.png">
                     <div class="nav-bar-right-title-signin">登入</div>
                 </div>
             </div>
