--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -5,6 +5,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.min.js"></script>
 <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script>
 <script type="module" src="/js/drama/drama.main.js"></script>
+<script src="/js/lib/topbar.js"></script>
 
 </body>
 
