--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -41,7 +41,7 @@ html {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 60px;
+    height: 70px;
     background-color: #fff;
     color: #1f2b3e;;
     font-size: 17px;
@@ -74,9 +74,27 @@ html {
     color: #1f2b3e;
 }
 
+.nav-bar-logo {
+    width: 100px;
+    height: auto;
+}
+
 .nav-bar-left-title-drama-list {
+    display: flex;
+    justify-content: left;
+    align-items: center;
     flex: none;
     margin-left: 20px;
+}
+
+.nav-bar-left-title-drama-icon {
+    width: 30px;
+    height: auto;
+    cursor: pointer;
+}
+
+.nav-bar-left-title-drama-title {
+    margin-left: 10px;
     cursor: pointer;
 }
 
@@ -88,14 +106,27 @@ html {
     width: 50%;
 }
 
+.nav-bar-right-title-add-drama-icon {
+    width: 30px;
+    height: auto;
+    cursor: pointer;
+}
+
 .nav-bar-right-title-add-drama {
     flex: none;
+    margin: 0px 20px 0px 10px;
+    cursor: pointer;
+}
+
+.nav-bar-right-title-signin-icon {
+    width: 30px;
+    height: auto;
     cursor: pointer;
 }
 
 .nav-bar-right-title-signin {
     flex: none;
-    margin-left: 20px;
+    margin-left: 10px;
     cursor: pointer;
 }
 
@@ -114,4 +145,40 @@ html {
     color: #fff;
     font-weight: bold;
     text-align: center;
+}
+
+.footer-text {
+    margin: 20px;
+}
+
+
+/* Other Devices */
+@media(max-width:1200px) {
+
+    .nav-bar-logo {
+        margin-left: 20px;
+    }
+
+    .nav-bar-right-title-signin {
+        margin-right: 20px;
+    }
+
+}
+
+@media(max-width:600px) {
+
+    .nav-bar-left-title-drama-title,
+    .nav-bar-right-title-add-drama,
+    .nav-bar-right-title-signin {
+        display: none;
+    }
+
+    .nav-bar-right-title-add-drama-icon {
+        margin-right: 20px;
+    }
+
+    .nav-bar-right-title-signin-icon {
+        margin-right: 20px;
+    }
+
 }
