--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -1,11 +1,12 @@
 /* Banner */
 .banner {
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 700px;
-    background-image: url("https://statics.tver.jp/images/content/thumbnail/episode/xlarge/ep8kibho4e.jpg?v=35");
+    background-image: url("/img/banner.jpg");
     background-position: 0px 60px center;
     background-repeat: no-repeat;
     /* background-size: 100% auto; */
@@ -13,15 +14,28 @@
     /* filter: brightness(0.8) contrast(120%); */
 }
 
+.transparent-layer {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background-color: rgba(123,134,155,0.4);
+}
+
 
 /* Search Bar */
 .search-bar {
+    z-index: 3;
     top: 35%;
     width: 50%;
+    margin-top: -100px;
 }
 
 .input-group, .form-control {
     height: 45px;
+    box-shadow: 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 .btn {
@@ -29,9 +43,14 @@
     height: 45px;
     padding: 0;
     border: none;
+    background-color: rgb(2, 177, 247) !important;
     background-image: url(/img/icon_search.png);
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.btn:hover {
+    opacity: 0.8;
 }
 
 .search-bar-title {
@@ -39,6 +58,7 @@
     color: #fff;
     font-size: 42px;
     font-weight: bold;
+    text-align: center;
 }
 
 
@@ -85,9 +105,14 @@
     margin: 20px;
 }
 
-.latest-drama-header,
-.popular-drama-header {
+.latest-drama-header {
     margin: 20px 10px 10px 10px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.popular-drama-header {
+    margin: 0px 10px 10px 10px;
     font-size: 25px;
     font-weight: bold;
 }
@@ -123,7 +148,7 @@
 .popular-drama-photo-individual-title {
     margin: 10px;
     padding: 5px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
 }
@@ -158,6 +183,7 @@
     width: 100%;
     height: auto;
     margin: 10px;
+    font-size: 20px;
     padding: 10px;
     border: 1px solid rgb(209, 206, 206);
     border-radius: 5px;
@@ -182,14 +208,22 @@
 
 .timetable-list-photo {
     width: 100%;
-    height: auto;
-    object-fit: contain;
+    height: 80px;
+    object-fit: cover;
     border-radius: 5px;
 }
 
 
 /* Other Devices */
 @media(max-width:1200px) {
+
+    .search-bar {
+        width: 85%;
+    }
+
+    .search-bar-title {
+        font-size: 30px;
+    }
 
     .latest-drama-photo-container,
     .popular-drama-photo-container {
@@ -215,15 +249,22 @@
 
 }
 
-@media(max-width:575px) {
-        
-    .timetable-list {
-        width: 90%;
-    }
+@media(max-width:600px) {
 
     .latest-drama-photo,
     .popular-drama-photo {
         width: 90%;
+    }
+
+    .timetable-list {
+        width: 90%;
+    }
+
+    .timetable-list-photo {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        border-radius: 5px;
     }
 
 }
