Update: show page contents only after successful fetching

--- a/frontend/page/drama.ejs
+++ b/frontend/page/drama.ejs
@@ -4,6 +4,9 @@
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
+<!-- Drama Content Container -->
+<%- include("./drama/drama.show.ejs") %>
+
 <!-- Introduction -->
 <%- include("./drama/drama.introduction.ejs") %>
 
