--- a/frontend/page/index.ejs
+++ b/frontend/page/index.ejs
@@ -7,6 +7,9 @@
 <!-- Banner -->
 <%- include("./index/index.banner.ejs") %>
 
+<!-- Index Content Container -->
+<%- include("./index/index.show.ejs") %>
+
 <!-- Latest Drama List-->
 <%- include("./index/index.latestDramaList.ejs") %>
 
