--- a/frontend/page/index/index.popularDramaList.ejs
+++ b/frontend/page/index/index.popularDramaList.ejs
@@ -1,6 +1,6 @@
 <div class="popular-drama-container">
     <div class="popular-drama-width">
         <div class="popular-drama-header">最受歡迎日本劇集</div>
-        <div id="popularDramaContainer" class="popular-drama-photo-container"></div>
+        <div id="popularDramaPhotoContainer" class="popular-drama-photo-container"></div>
     </div>
 </div>
