Update: drama API and index page layout

--- a/frontend/page/commons/common.navigation.ejs
+++ b/frontend/page/commons/common.navigation.ejs
@@ -5,7 +5,7 @@
                 <div class="nav-bar-left-title">
                     <div class="nav-bar-left-title-web-title">
                         <a class="nav-bar-left-title-web-title-color" href="/">
-                            <img class="nav-bar-logo" src="/img/logo.png">
+                            <img class="nav-bar-logo" src="/img/logo_2.png">
                         </a>
                     </div>
                     <div class="nav-bar-left-title-drama-list">
