--- a/frontend/page/commons/common.navigation.ejs
+++ b/frontend/page/commons/common.navigation.ejs
@@ -16,8 +16,11 @@
                 <div class="nav-bar-right-title">
                     <img class="nav-bar-right-title-add-drama-icon" src="/img/icon_add_drama.png">
                     <div class="nav-bar-right-title-add-drama">提供劇集資料</div>
-                    <img class="nav-bar-right-title-signin-icon" src="/img/icon_signin.png">
-                    <div class="nav-bar-right-title-signin">登入</div>
+
+                    <a href="/signin"><img id="signinIconBtn" class="nav-bar-right-title-signin-icon" src="/img/icon_signin.png"></a>
+                    <a href="/signin"><div id="signinBeforeBtn" class="nav-bar-right-title-signin-before">登入</div></a>
+
+                    <a href="/signin"><div id="signinAfterBtn" class="nav-bar-right-title-signin-after" style="display:none;"></div></a>
                 </div>
             </div>
         </div>
