--- a/frontend/page/signin.ejs
+++ b/frontend/page/signin.ejs
@@ -1,6 +1,9 @@
 <!-- Header -->
 <%- include("./signin/signin.header.ejs") %>
 
+<!-- Drama Content Container -->
+<%- include("./signin/signin.show.ejs") %>
+
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
