--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -130,17 +130,24 @@ html {
     cursor: pointer;
 }
 
+.nav-bar-right-title-profile-picture {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid rgb(209, 206, 206);
+    object-fit: contain;
+}
+
 
 /* Footer */
 .footer {
     display: flex;
     position: absolute;
-    bottom: 20;
+    bottom: 0;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 200px;
-    margin-top: 130px;
     background-color: #1f2b3e;
     color: #fff;
     font-weight: bold;
@@ -169,15 +176,13 @@ html {
 
     .nav-bar-left-title-drama-title,
     .nav-bar-right-title-add-drama,
-    .nav-bar-right-title-signin {
+    .nav-bar-right-title-signin-before {
         display: none;
     }
 
-    .nav-bar-right-title-add-drama-icon {
-        margin-right: 20px;
-    }
-
-    .nav-bar-right-title-signin-icon {
+    .nav-bar-right-title-add-drama-icon,
+    .nav-bar-right-title-signin-icon,
+    .nav-bar-right-title-signin-after {
         margin-right: 20px;
     }
 
